commit 9a53393
Author: hutch <hutch@midwales.net>
Date:   Fri Oct 7 15:29:40 2011 +0100

    fixed image size bug #1302434

imagepicker.theme.inc
imagepicker_iframe.js

commit af475a0
Author: hutch <hutch@midwales.net>
Date:   Wed Sep 28 16:40:40 2011 +0100

    coder review cleanup

imagepicker.edit.inc
imagepicker.functions.inc
imagepicker.upload.inc

commit e7ead5a
Author: hutch <hutch@midwales.net>
Date:   Wed Sep 28 11:40:45 2011 +0100

    added linkbox feature

CHANGELOG.txt
imagepicker.admin.inc
imagepicker.functions.inc
imagepicker.theme.inc
imagepicker_iframe.js

commit 9361e5a
Author: hutch <hutch@midwales.net>
Date:   Mon Sep 12 23:13:59 2011 +0100

    fixed groups bugs in iframe

imagepicker.functions.inc

commit 276cc8c
Author: hutch <hutch@midwales.net>
Date:   Thu Aug 18 10:11:56 2011 +0100

    fixed description validation, added check_plain

CHANGELOG.txt
imagepicker.edit.inc
imagepicker.functions.inc
imagepicker.upload.inc

commit cd225d8
Author: hutch <hutch@midwales.net>
Date:   Sat Jul 30 08:54:37 2011 +0100

    added some notice avoidance

imagepicker.upload.inc

commit d116fbe
Author: hutch <hutch@midwales.net>
Date:   Fri Jul 22 20:36:32 2011 +0100

    added image title option

CHANGELOG.txt
imagepicker.admin.inc
imagepicker.css
imagepicker.form-elements.inc
imagepicker.theme.inc
imagepicker.user.inc
imagepicker_iframe.js

commit 1edafa7
Author: hutch <hutch@midwales.net>
Date:   Thu Jul 21 12:59:35 2011 +0100

    added width and height to insert

imagepicker.theme.inc
imagepicker_iframe.js

commit 4e447af
Author: hutch <hutch@midwales.net>
Date:   Thu Jul 21 11:03:44 2011 +0100

    changed function names containing '_process'

CHANGELOG.txt
contribs/imagepicker_postlet/imagepicker_postlet.module
imagepicker.edit.inc
imagepicker.functions.inc
imagepicker.imagefuncs.inc
imagepicker.import.inc
imagepicker.upload.inc

commit 708b493
Author: hutch <hutch@midwales.net>
Date:   Fri Jun 17 09:05:18 2011 +0100
